# DFRobot_AS3935

./: .dockerignore  .env.sample  .gitignore  Dockerfile  OUT-OF-THE-BOX-GUIDE.md  docker-compose.yml  pyproject.toml  readme.md
.kiro/specs/as3935-modernization/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/lightning-data-pipeline/: .config.kiro  design.md  requirements.md  (+1 more)
docker/: entrypoint.py  setup.sh
examples/: lightning_detection.py  sensor_configuration.py
scripts/: lightning.sh  setup_pi.sh  uninstall_pi.sh
src/dfrobot_as3935/: __init__.py  constants.py  sensor.py  validators.py
src/lightning_api/: __init__.py  __main__.py  app.py  dependencies.py  models.py
src/lightning_collector/: __init__.py  __main__.py  collector.py  csv_writer.py  db_writer.py
src/lightning_common/: __init__.py  cli_db_apply.py  config.py  db.py  models.py
systemd/: lightning-api.service  lightning-collector.service
tests/: conftest.py  test_api_properties.py  test_config_properties.py  test_constants.py  test_csv_writer.py  test_db_writer.py  test_events_routes.py  test_hardware_sensor_smoke.py  test_health_route.py  test_interrupt_callback.py  test_lightning_filter.py  test_pipeline_properties.py  test_properties.py  test_property_close_idempotent.py  test_property_i2c_error.py  test_property_i2c_logging.py  test_property_post_close.py  test_property_register_read.py  test_property_register_write.py  test_property_strike_energy.py  test_property_validation_acceptance.py  test_property_validation_rejection.py  test_sensor.py  test_validators.py
(+3 files in other folders)
